--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,9 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container: openjdk
+      defaults: 
+        run: 
+          working-directory: Projects/P1
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -72,5 +75,5 @@ jobs:
       # Runs a single command using the runners shell
       - name: Compiles the code and runs the test 
         run: 
-          javac -cp "junit-4.10.jar" Projects/P1/src/*.java Projects/P1/tests/*.java
-          java -cp "junit-4.10.jar" org.junit.runner.JUnitCore TestGhostInRange
+          javac -cp "tests/junit-4.10.jar:src/:tests/" src/*.java tests/*.java
+          java -cp "tests/junit-4.10.jar:src/:tests/" org.junit.runner.JUnitCore your_test_here
