--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container: openjdk
+    defaults:
+      run:
+        working-directory: Projects/P1
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -42,12 +45,15 @@ jobs:
       # Runs a single command using the runners shell
       - name: Compiles the code and runs the test 
         run: 
-          javac -cp "tests/junit-4.10.jar:src/:tests/" Projects/P1/src/*.java Projects/P1/tests/*.java
+          javac -cp "tests/junit-4.10.jar:src/:tests/" src/*.java tests/*.java
           java -cp "tests/junit-4.10.jar:src/:tests/" org.junit.runner.JUnitCore TestMapMove
   testPacmanConsume:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container: openjdk
+    defaults:
+      run:
+        working-directory: Projects/P1
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -57,7 +63,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Compiles the code and runs the test 
         run: 
-          javac -cp "tests/junit-4.10.jar:src/:tests/" Projects/P1/src/*.java Projects/P1/tests/*.java
+          javac -cp "tests/junit-4.10.jar:src/:tests/" src/*.java tests/*.java
           java -cp "tests/junit-4.10.jar:src/:tests/" org.junit.runner.JUnitCore TestConsume
   testGhostInRange:
     # The type of runner that the job will run on
@@ -76,4 +82,4 @@ jobs:
       - name: Compiles the code and runs the test 
         run: 
           javac -cp "tests/junit-4.10.jar:src/:tests/" src/*.java tests/*.java
-          java -cp "tests/junit-4.10.jar:src/:tests/" org.junit.runner.JUnitCore your_test_here
+          java -cp "tests/junit-4.10.jar:src/:tests/" org.junit.runner.JUnitCore TestGhostInRange
