--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,13 @@
 
 name: CI
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -28,3 +28,23 @@ jobs:
       # Runs a single command using the runners shell
       - name: Compiles the code
         run: javac -cp "src/" src/*.java
+
+actions-David-tests:
+  # The type of runner that the job will run on
+  runs-on: ubuntu-latest
+  container: openjdk
+  # Steps represent a sequence of tasks that will be executed as part of the job
+  steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+
+    # tests PacmanInRange, Ghost-move, Map-attack
+    - name: compile actions-David-tests
+      run: |
+        cd Projects/P1/
+        javac -cp "tests/junit-4.10.jar:src/:tests/" src/*.java
+        java -cp "tests/junit-4.10.jar:src/:tests/" org.junit.runner.JUnitCore TestPacManInRange
+        java -cp "tests/junit-4.10.jar:src/:tests/" org.junit.runner.JUnitCore TestGhostMove
+        java -cp "tests/junit-4.10.jar:src/:tests/" org.junit.runner.JUnitCore TestMapAttack
+        cd ..
+        cd ..
