--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,13 @@
 
 name: CI
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main, FTR-actions ]
+    branches: [main, FTR-actions]
   pull_request:
-    branches: [ main, FTR-actions ]
+    branches: [main, FTR-actions]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -29,3 +29,54 @@ jobs:
       # Runs a single command using the runners shell
       - name: Compiles the code
         run: javac -cp "src/" Projects/P1/src/*.java
+testPacmanInRange:
+  # The type of runner that the job will run on
+  runs-on: ubuntu-latest
+  container: openjdk
+  defaults:
+    run:
+      working-directory: Projects/P1
+  # Steps represent a sequence of tasks that will be executed as part of the job
+  steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+
+    # tests PacmanInRange, Ghost-move, Map-attack
+    - name: compile actions-David-test1
+      run: |
+        javac -cp "tests/junit-4.10.jar:src/:tests/" src/*.java
+        java -cp "tests/junit-4.10.jar:src/:tests/" org.junit.runner.JUnitCore TestPacManInRange
+testGhostMove:
+  # The type of runner that the job will run on
+  runs-on: ubuntu-latest
+  container: openjdk
+  defaults:
+    run:
+      working-directory: Projects/P1
+  # Steps represent a sequence of tasks that will be executed as part of the job
+  steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+
+    # tests PacmanInRange, Ghost-move, Map-attack
+    - name: compile actions-David-test2
+      run: |
+        javac -cp "tests/junit-4.10.jar:src/:tests/" src/*.java
+        java -cp "tests/junit-4.10.jar:src/:tests/" org.junit.runner.JUnitCore TestGhostMove
+testMapAttack:
+  # The type of runner that the job will run on
+  runs-on: ubuntu-latest
+  container: openjdk
+  defaults:
+    run:
+      working-directory: Projects/P1
+  # Steps represent a sequence of tasks that will be executed as part of the job
+  steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+
+    # tests PacmanInRange, Ghost-move, Map-attack
+    - name: compile actions-David-test3
+      run: |
+        javac -cp "tests/junit-4.10.jar:src/:tests/" src/*.java
+        java -cp "tests/junit-4.10.jar:src/:tests/" org.junit.runner.JUnitCore TestMapAttack
